--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -46,7 +46,6 @@
     <ClInclude Include="Sources\Ork.h" />
     <ClInclude Include="Sources\Screen.h" />
     <ClInclude Include="Sources\sprite.h" />
-    <ClInclude Include="Sources\SyncQueue.h" />
     <ClInclude Include="Sources\sync_random.h" />
     <ClInclude Include="Sources\Teleportator.h" />
     <ClInclude Include="Sources\Testmob.h" />
@@ -119,13 +118,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\zlib127\zlib-1.2.7;C:\Program Files %28x86%29\Visual Leak Detector\include;D:\poco-1.4.3p1\poco-1.4.3p1\Net\include;D:\poco-1.4.3p1\poco-1.4.3p1\Foundation\include;D:\loki-0.1.7\loki-0.1.7\include\loki;D:\SDL_ttf-2.0.10\SDL_ttf-2.0.10;C:\Users\my\Downloads\SDL_net-1.2.7\SDL_net-1.2.7;C:\Users\my\Downloads\SDL-devel-1.2.14-VC8\SDL-1.2.14\include;$(IncludePath)</IncludePath>
+    <IncludePath>D:\zlib127\zlib-1.2.7;D:\loki-0.1.7\loki-0.1.7\include\loki;D:\SDL_ttf-2.0.10\SDL_ttf-2.0.10;C:\Users\my\Downloads\SDL_net-1.2.7\SDL_net-1.2.7;C:\Users\my\Downloads\SDL-devel-1.2.14-VC8\SDL-1.2.14\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\my\Documents\Visual Studio 2010\Projects\kvengine\Libs;$(LibraryPath)</LibraryPath>
     <TargetName>$(ProjectName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\SDL_gfx-2.0.23\SDL_gfx-2.0.23;D:\poco-1.4.3p1\poco-1.4.3p1\Foundation\include;D:\poco-1.4.3p1\poco-1.4.3p1\Net\include;D:\loki-0.1.7\loki-0.1.7\include\loki;D:\SDL_ttf-2.0.10\SDL_ttf-2.0.10;C:\Users\my\Downloads\SDL_net-1.2.7\SDL_net-1.2.7\VisualC;C:\Users\my\Downloads\SDL-devel-1.2.14-VC8\SDL-1.2.14\include;$(IncludePath)</IncludePath>
+    <IncludePath>D:\loki-0.1.7\loki-0.1.7\include\loki;D:\SDL_ttf-2.0.10\SDL_ttf-2.0.10;C:\Users\my\Downloads\SDL_net-1.2.7\SDL_net-1.2.7\VisualC;C:\Users\my\Downloads\SDL-devel-1.2.14-VC8\SDL-1.2.14\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\my\Documents\Visual Studio 2010\Projects\kvengine\Libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -138,6 +137,7 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
+      <ExceptionHandling>Sync</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -145,7 +145,6 @@
       <AdditionalDependencies>glu32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>NotSet</ShowProgress>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
-      <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -156,6 +155,8 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <ExceptionHandling>Sync</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -163,7 +164,6 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>glu32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <IgnoreSpecificDefaultLibraries>PocoNet.lib;PocoFoundation.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
