--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClInclude Include="Sources\helpers.h">
       <Filter>Header Files\Main</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\mob_position.h">
+      <Filter>Header Files\Main</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
@@ -298,6 +301,9 @@
     </ClCompile>
     <ClCompile Include="Sources\TileInt.cpp">
       <Filter>Source Files\Interfaces</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\mob_position.cpp">
+      <Filter>Source Files\Main</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
