--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -48,6 +48,7 @@
     <ClInclude Include="Sources\OnMapBaseInt.h" />
     <ClInclude Include="Sources\OnMapInt.h" />
     <ClInclude Include="Sources\Ork.h" />
+    <ClInclude Include="Sources\Params.h" />
     <ClInclude Include="Sources\Screen.h" />
     <ClInclude Include="Sources\sound.h" />
     <ClInclude Include="Sources\sprite.h" />
@@ -86,6 +87,7 @@
     <ClCompile Include="Sources\NetClientImpl.cpp" />
     <ClCompile Include="Sources\OnMapInt.cpp" />
     <ClCompile Include="Sources\Ork.cpp" />
+    <ClCompile Include="Sources\Params.cpp" />
     <ClCompile Include="Sources\Screen.cpp" />
     <ClCompile Include="Sources\sound.cpp" />
     <ClCompile Include="Sources\sprite.cpp" />
