--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -207,6 +207,9 @@
     <ClInclude Include="Sources\Params.h">
       <Filter>Header Files\Main</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\MapEditor.h">
+      <Filter>Header Files\Main</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
