Some cycle include removed

--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -213,6 +213,9 @@
     <ClInclude Include="Sources\SdlInit.h">
       <Filter>Header Files\Main</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\HelperStructers.h">
+      <Filter>Header Files\Main</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
@@ -330,6 +333,9 @@
       <Filter>Source Files\Main</Filter>
     </ClCompile>
     <ClCompile Include="Sources\SdlInit.cpp">
+      <Filter>Source Files\Main</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Idptr.cpp">
       <Filter>Source Files\Main</Filter>
     </ClCompile>
   </ItemGroup>
