--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="Sources\GLSprite.h" />
     <ClInclude Include="Sources\hashes.h" />
     <ClInclude Include="Sources\helpers.h" />
+    <ClInclude Include="Sources\HelperStructers.h" />
     <ClInclude Include="Sources\Idptr.h" />
     <ClInclude Include="Sources\ItemFabric.h" />
     <ClInclude Include="Sources\Kivsjak.h" />
@@ -73,6 +74,7 @@
     <ClCompile Include="Sources\Firebullet.cpp" />
     <ClCompile Include="Sources\FireEffect.cpp" />
     <ClCompile Include="Sources\GLSprite.cpp" />
+    <ClCompile Include="Sources\Idptr.cpp" />
     <ClCompile Include="Sources\ItemFabric.cpp" />
     <ClCompile Include="Sources\Kivsjak.cpp" />
     <ClCompile Include="Sources\Liquid.cpp" />
