--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -216,6 +216,9 @@
     <ClInclude Include="Sources\HelperStructers.h">
       <Filter>Header Files\Main</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\visible_points.h">
+      <Filter>Header Files\Main</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
@@ -336,6 +339,9 @@
       <Filter>Source Files\Main</Filter>
     </ClCompile>
     <ClCompile Include="Sources\Idptr.cpp">
+      <Filter>Source Files\Main</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\visible_points.cpp">
       <Filter>Source Files\Main</Filter>
     </ClCompile>
   </ItemGroup>
