--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,366 @@ ipch
 /knv
 /Release/knv
 /Release/errorfile.txt
+/clientmap (2).map
+/clientmap.map
+/Debug/ApproxGLImage.obj
+/Debug/ASpritesClass.obj
+/Debug/CAliveMob.obj
+/Debug/cl.command.1.tlog
+/Debug/CL.read.1.tlog
+/Debug/CL.write.1.tlog
+/Debug/clientmap.map
+/Debug/clientmap1.map
+/Debug/constcpp.obj
+/Debug/CSmallItem.obj
+/Debug/dbghelp.dll
+/Debug/Debug.obj
+/Debug/DrawInt.obj
+/Debug/errorfile.txt
+/Debug/Firebullet.obj
+/Debug/FireEffect.obj
+/Debug/GLSprite.obj
+/Debug/icons/top_overlay.png
+/Debug/Idptr.obj
+/Debug/ItemFabric.obj
+/Debug/jpeg.dll
+/Debug/Kivsjak.obj
+/Debug/KVEngine.exe
+/Debug/KVEngine.exe.embed.manifest
+/Debug/KVEngine.exe.embed.manifest.res
+/Debug/KVEngine.exe.intermediate.manifest
+/Debug/KVEngine.ilk
+/Debug/KVEngine.lastbuildstate
+/Debug/KVEngine.pdb
+/Debug/KVEngine_manifest.rc
+/Debug/libfreetype-6.dll
+/Debug/libfreetype.dll
+/Debug/libpng12-0.dll
+/Debug/libsndfile-1.dll
+/Debug/libtiff-3.dll
+/Debug/link-cvtres.read.1.tlog
+/Debug/link-cvtres.write.1.tlog
+/Debug/link.11080-cvtres.read.1.tlog
+/Debug/link.11080-cvtres.write.1.tlog
+/Debug/link.11080.read.1.tlog
+/Debug/link.11080.write.1.tlog
+/Debug/link.12408-cvtres.read.1.tlog
+/Debug/link.12408-cvtres.write.1.tlog
+/Debug/link.12408.read.1.tlog
+/Debug/link.12408.write.1.tlog
+/Debug/link.2000-cvtres.read.1.tlog
+/Debug/link.2000-cvtres.write.1.tlog
+/Debug/link.2000.read.1.tlog
+/Debug/link.2000.write.1.tlog
+/Debug/link.2272-cvtres.read.1.tlog
+/Debug/link.2272-cvtres.write.1.tlog
+/Debug/link.2272.read.1.tlog
+/Debug/link.2272.write.1.tlog
+/Debug/link.2820-cvtres.read.1.tlog
+/Debug/link.2820-cvtres.write.1.tlog
+/Debug/link.2820.read.1.tlog
+/Debug/link.2820.write.1.tlog
+/Debug/link.3220-cvtres.read.1.tlog
+/Debug/link.3220-cvtres.write.1.tlog
+/Debug/link.3220.read.1.tlog
+/Debug/link.3220.write.1.tlog
+/Debug/link.3272.read.1.tlog
+/Debug/link.3272.write.1.tlog
+/Debug/link.4212-cvtres.read.1.tlog
+/Debug/link.4212-cvtres.write.1.tlog
+/Debug/link.4212.read.1.tlog
+/Debug/link.4212.write.1.tlog
+/Debug/link.4608-cvtres.read.1.tlog
+/Debug/link.4608-cvtres.write.1.tlog
+/Debug/link.4608.read.1.tlog
+/Debug/link.4608.write.1.tlog
+/Debug/link.4672-cvtres.read.1.tlog
+/Debug/link.4672-cvtres.write.1.tlog
+/Debug/link.4672.read.1.tlog
+/Debug/link.4672.write.1.tlog
+/Debug/link.4796-cvtres.read.1.tlog
+/Debug/link.4796-cvtres.write.1.tlog
+/Debug/link.4796.read.1.tlog
+/Debug/link.4796.write.1.tlog
+/Debug/link.5008-cvtres.read.1.tlog
+/Debug/link.5008-cvtres.write.1.tlog
+/Debug/link.5008.read.1.tlog
+/Debug/link.5008.write.1.tlog
+/Debug/link.5292-cvtres.read.1.tlog
+/Debug/link.5292-cvtres.write.1.tlog
+/Debug/link.5292.read.1.tlog
+/Debug/link.5292.write.1.tlog
+/Debug/link.560-cvtres.read.1.tlog
+/Debug/link.560-cvtres.write.1.tlog
+/Debug/link.560.read.1.tlog
+/Debug/link.560.write.1.tlog
+/Debug/link.5724-cvtres.read.1.tlog
+/Debug/link.5724-cvtres.write.1.tlog
+/Debug/link.5724.read.1.tlog
+/Debug/link.5724.write.1.tlog
+/Debug/link.5760-cvtres.read.1.tlog
+/Debug/link.5760-cvtres.write.1.tlog
+/Debug/link.5760.read.1.tlog
+/Debug/link.5760.write.1.tlog
+/Debug/link.5960-cvtres.read.1.tlog
+/Debug/link.5960-cvtres.write.1.tlog
+/Debug/link.5960.read.1.tlog
+/Debug/link.5960.write.1.tlog
+/Debug/link.5988-cvtres.read.1.tlog
+/Debug/link.5988-cvtres.write.1.tlog
+/Debug/link.5988.read.1.tlog
+/Debug/link.5988.write.1.tlog
+/Debug/link.6112-cvtres.read.1.tlog
+/Debug/link.6112-cvtres.write.1.tlog
+/Debug/link.6112.read.1.tlog
+/Debug/link.6112.write.1.tlog
+/Debug/link.6388-cvtres.read.1.tlog
+/Debug/link.6388-cvtres.write.1.tlog
+/Debug/link.6388.read.1.tlog
+/Debug/link.6388.write.1.tlog
+/Debug/link.7288-cvtres.read.1.tlog
+/Debug/link.7288-cvtres.write.1.tlog
+/Debug/link.7288.read.1.tlog
+/Debug/link.7288.write.1.tlog
+/Debug/link.7500-cvtres.read.1.tlog
+/Debug/link.7500-cvtres.write.1.tlog
+/Debug/link.7500.read.1.tlog
+/Debug/link.7500.write.1.tlog
+/Debug/link.7688-cvtres.read.1.tlog
+/Debug/link.7688-cvtres.write.1.tlog
+/Debug/link.7688.read.1.tlog
+/Debug/link.7688.write.1.tlog
+/Debug/link.8764-cvtres.read.1.tlog
+/Debug/link.8764-cvtres.write.1.tlog
+/Debug/link.8764.read.1.tlog
+/Debug/link.8764.write.1.tlog
+/Debug/link.command.1.tlog
+/Debug/link.read.1.tlog
+/Debug/link.write.1.tlog
+/Debug/Liquid.obj
+/Debug/LiquidHolder.obj
+/Debug/main.obj
+/Debug/MainInt.obj
+/Debug/MapClass.obj
+/Debug/MapEditor.obj
+/Debug/Message.obj
+/Debug/Mob.obj
+/Debug/mob_position.obj
+/Debug/MobInt.obj
+/Debug/MonstrClass.obj
+/Debug/MoveEffect.obj
+/Debug/msvcp100.dll
+/Debug/mt.command.1.tlog
+/Debug/mt.read.1.tlog
+/Debug/mt.write.1.tlog
+/Debug/NetClientImpl.obj
+/Debug/OnMapInt.obj
+/Debug/OpenAL32.dll
+/Debug/Ork.obj
+/Debug/Params.obj
+/Debug/rc.command.1.tlog
+/Debug/rc.read.1.tlog
+/Debug/rc.write.1.tlog
+/Debug/Screen.obj
+/Debug/SDL.dll
+/Debug/SDL_image.dll
+/Debug/SDL_net.dll
+/Debug/SDL_ttf.dll
+/Debug/SdlInit.obj
+/Debug/sfml-audio-2.dll
+/Debug/sfml-audio-d-2.dll
+/Debug/sfml-system-2.dll
+/Debug/sfml-system-d-2.dll
+/Debug/sound.obj
+/Debug/sounds/click.ogx
+/Debug/sounds/jump.ogx
+/Debug/sounds/step.wav
+/Debug/sounds/work_boots_jump_on_plastic_tarpaulin.mp3
+/Debug/sounds/work_boots_skid_on_leaves.mp3
+/Debug/sprite.obj
+/Debug/sync_random.obj
+/Debug/Teleportator.obj
+/Debug/Testmob.obj
+/Debug/Text.obj
+/Debug/TileInt.obj
+/Debug/Turf.obj
+/Debug/TypelistOfItems.obj
+/Debug/vc100.idb
+/Debug/vc100.pdb
+/Debug/zlib1.dll
+/Design.zip
+/errorfile.txt
+/K&V.zip
+/K&V/clientmap.map
+/K&V/errorfile.txt
+/K&V/font.ttf
+/K&V/icons/adam_down.png
+/K&V/icons/bee.jpeg
+/K&V/icons/blood.png
+/K&V/icons/cockmeat.png
+/K&V/icons/cup.png
+/K&V/icons/deer.png
+/K&V/icons/fire.png
+/K&V/icons/fire_anim.png
+/K&V/icons/fire_mine.png
+/K&V/icons/firehoney.png
+/K&V/icons/food.dmi
+/K&V/icons/ghost.png
+/K&V/icons/golems2.bmp
+/K&V/icons/ground_down.png
+/K&V/icons/honey.png
+/K&V/icons/kivsjak.png
+/K&V/icons/kivtek.png
+/K&V/icons/man.png
+/K&V/icons/meat.png
+/K&V/icons/ork.png
+/K&V/icons/peregnoj.png
+/K&V/icons/peregnojtek.png
+/K&V/icons/petrol.png
+/K&V/icons/pit.png
+/K&V/icons/projectiles.dmi
+/K&V/icons/rock.png
+/K&V/icons/rooster.png
+/K&V/icons/space.dmi
+/K&V/icons/spear.png
+/K&V/icons/teleportator.png
+/K&V/icons/top_overlay.png
+/K&V/icons/tree.png
+/K&V/icons/turf.png
+/K&V/icons/walls.dmi
+/K&V/icons/water.bmp
+/K&V/icons/water.png
+/K&V/icons/weed.png
+/K&V/icons/whatcat.png
+/K&V/icons/woman.png
+/K&V/jpeg.dll
+/K&V/KVEngine.exe
+/K&V/libfreetype-6.dll
+/K&V/libfreetype.dll
+/K&V/libpng12-0.dll
+/K&V/libsndfile-1.dll
+/K&V/libtiff-3.dll
+/K&V/msvcp100.dll
+/K&V/OpenAL32.dll
+/K&V/SDL.dll
+/K&V/SDL_image.dll
+/K&V/SDL_net.dll
+/K&V/SDL_ttf.dll
+/K&V/sfml-audio-2.dll
+/K&V/sfml-system-2.dll
+/K&V/sounds/click.ogx
+/K&V/sounds/jump.ogx
+/K&V/sounds/step.wav
+/K&V/sounds/work_boots_jump_on_plastic_tarpaulin.mp3
+/K&V/sounds/work_boots_skid_on_leaves.mp3
+/K&V/start.bat
+/K&V/zlib1.dll
+/knv-server-go/knv-server-go.exe
+/KVEngine.opensdf
+/Release/ApproxGLImage.obj
+/Release/ASpritesClass.obj
+/Release/CAliveMob.obj
+/Release/cl.command.1.tlog
+/Release/CL.read.1.tlog
+/Release/CL.write.1.tlog
+/Release/clientmap.map
+/Release/clientmap.rar
+/Release/clientmap1 (2).map
+/Release/clientmap1.map
+/Release/clientmap_.map
+/Release/constcpp.obj
+/Release/Creator.obj
+/Release/CSmallItem.obj
+/Release/dbghelp.dll
+/Release/Debug.obj
+/Release/DrawInt.obj
+/Release/Firebullet.obj
+/Release/FireEffect.obj
+/Release/GLSprite.obj
+/Release/Idptr.obj
+/Release/ItemFabric.obj
+/Release/jpeg.dll
+/Release/Kivsjak.obj
+/Release/KVEngine.exe
+/Release/KVEngine.exe.intermediate.manifest
+/Release/KVEngine.lastbuildstate
+/Release/KVEngine.pdb
+/Release/libfreetype-6.dll
+/Release/libfreetype.dll
+/Release/libpng12-0.dll
+/Release/libsndfile-1.dll
+/Release/libtiff-3.dll
+/Release/link.command.1.tlog
+/Release/link.read.1.tlog
+/Release/link.write.1.tlog
+/Release/Liquid.obj
+/Release/LiquidHolder.obj
+/Release/main.obj
+/Release/MainInt.obj
+/Release/makehrtf.exe
+/Release/map1.map
+/Release/MapClass.obj
+/Release/MapEditor.obj
+/Release/Message.obj
+/Release/Mob.obj
+/Release/mob_position.obj
+/Release/MobInt.obj
+/Release/MonstrClass.obj
+/Release/MoveEffect.obj
+/Release/msvcp100.dll
+/Release/mt.command.1.tlog
+/Release/mt.read.1.tlog
+/Release/mt.write.1.tlog
+/Release/NetClientImpl.obj
+/Release/OnMapInt.obj
+/Release/openal-info.exe
+/Release/OpenAL32.dll
+/Release/Ork.obj
+/Release/Params.obj
+/Release/PocoFoundation.dll
+/Release/PocoNet.dll
+/Release/Saves/1save1000
+/Release/Saves/1save1100
+/Release/Saves/1save500
+/Release/Saves/1save600
+/Release/Saves/1save700
+/Release/Saves/1save800
+/Release/Saves/1save900
+/Release/Saves/debugsave0
+/Release/Saves/debugsave100
+/Release/Saves/debugsave1000
+/Release/Saves/debugsave200
+/Release/Saves/debugsave300
+/Release/Saves/debugsave400
+/Release/Saves/debugsave500
+/Release/Saves/debugsave600
+/Release/Saves/debugsave700
+/Release/Saves/debugsave800
+/Release/Saves/debugsave900
+/Release/Screen.obj
+/Release/SDL.dll
+/Release/SDL_gfx.dll
+/Release/SDL_image.dll
+/Release/SDL_net.dll
+/Release/SDL_ttf.dll
+/Release/SdlInit.obj
+/Release/sfml-audio-2.dll
+/Release/sfml-system-2.dll
+/Release/sound.obj
+/Release/sounds/work_boots_jump_on_plastic_tarpaulin.mp3
+/Release/sounds/work_boots_skid_on_leaves.mp3
+/Release/sprite.obj
+/Release/sync_random.obj
+/Release/Teleportator.obj
+/Release/Testmob.obj
+/Release/Text.obj
+/Release/TileInt.obj
+/Release/Turf.obj
+/Release/TypelistOfItems.obj
+/Release/utils.obj
+/Release/vc100.pdb
+/Release/visible_points.obj
+/Release/vld_x86.dll
+/Release/zlib1.dll
+/Server.zip
+/Sources.zip
