--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClInclude Include="Sources\utils.h">
       <Filter>Header Files\Main</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\ITurf.h">
+      <Filter>Header Files\Interfaces</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
