--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -44,6 +44,7 @@
     <ClInclude Include="Sources\Message.h" />
     <ClInclude Include="Sources\MessageReceiver.h" />
     <ClInclude Include="Sources\Metadata.h" />
+    <ClInclude Include="Sources\MetalWall.h" />
     <ClInclude Include="Sources\Mob.h" />
     <ClInclude Include="Sources\MobInt.h" />
     <ClInclude Include="Sources\mob_position.h" />
@@ -59,6 +60,7 @@
     <ClInclude Include="Sources\Screen.h" />
     <ClInclude Include="Sources\SdlInit.h" />
     <ClInclude Include="Sources\sound.h" />
+    <ClInclude Include="Sources\SpaceTurf.h" />
     <ClInclude Include="Sources\sprite.h" />
     <ClInclude Include="Sources\sync_random.h" />
     <ClInclude Include="Sources\Teleportator.h" />
@@ -95,6 +97,7 @@
     <ClCompile Include="Sources\MapEditor.cpp" />
     <ClCompile Include="Sources\Message.cpp" />
     <ClCompile Include="Sources\Metadata.cpp" />
+    <ClCompile Include="Sources\MetalWall.cpp" />
     <ClCompile Include="Sources\Mob.cpp" />
     <ClCompile Include="Sources\MobInt.cpp" />
     <ClCompile Include="Sources\mob_position.cpp" />
@@ -108,6 +111,7 @@
     <ClCompile Include="Sources\Screen.cpp" />
     <ClCompile Include="Sources\SdlInit.cpp" />
     <ClCompile Include="Sources\sound.cpp" />
+    <ClCompile Include="Sources\SpaceTurf.cpp" />
     <ClCompile Include="Sources\sprite.cpp" />
     <ClCompile Include="Sources\sync_random.cpp" />
     <ClCompile Include="Sources\Teleportator.cpp" />
