--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClInclude Include="Sources\MetalWall.h">
       <Filter>Header Files\Space</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\StreamWrapper.h">
+      <Filter>Header Files\Main</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
