--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -18,6 +18,7 @@
     <ClInclude Include="Sources\Creator.h" />
     <ClInclude Include="Sources\CSmallItem.h" />
     <ClInclude Include="Sources\Debug.h" />
+    <ClInclude Include="Sources\Door.h" />
     <ClInclude Include="Sources\DrawInt.h" />
     <ClInclude Include="Sources\EffectSystem.h" />
     <ClInclude Include="Sources\FastIsType.h" />
@@ -82,6 +83,7 @@
     <ClCompile Include="Sources\Creator.cpp" />
     <ClCompile Include="Sources\CSmallItem.cpp" />
     <ClCompile Include="Sources\Debug.cpp" />
+    <ClCompile Include="Sources\Door.cpp" />
     <ClCompile Include="Sources\DrawInt.cpp" />
     <ClCompile Include="Sources\Firebullet.cpp" />
     <ClCompile Include="Sources\FireEffect.cpp" />
