--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="Sources\FireEffect.h" />
     <ClInclude Include="Sources\Floor.h" />
     <ClInclude Include="Sources\GLSprite.h" />
+    <ClInclude Include="Sources\Grille.h" />
     <ClInclude Include="Sources\hashes.h" />
     <ClInclude Include="Sources\helpers.h" />
     <ClInclude Include="Sources\HelperStructers.h" />
@@ -89,6 +90,7 @@
     <ClCompile Include="Sources\FireEffect.cpp" />
     <ClCompile Include="Sources\Floor.cpp" />
     <ClCompile Include="Sources\GLSprite.cpp" />
+    <ClCompile Include="Sources\Grille.cpp" />
     <ClCompile Include="Sources\Idptr.cpp" />
     <ClCompile Include="Sources\IMovable.cpp" />
     <ClCompile Include="Sources\ItemFabric.cpp" />
