--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -258,6 +258,9 @@
     <ClInclude Include="Sources\Door.h">
       <Filter>Header Files\Space</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Grille.h">
+      <Filter>Header Files\Space</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
@@ -411,6 +414,9 @@
       <Filter>Source Files\Space</Filter>
     </ClCompile>
     <ClCompile Include="Sources\Door.cpp">
+      <Filter>Source Files\Space</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Grille.cpp">
       <Filter>Source Files\Space</Filter>
     </ClCompile>
   </ItemGroup>
