--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClInclude Include="Sources\Grille.h">
       <Filter>Header Files\Space</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Glass.h">
+      <Filter>Header Files\Space</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
@@ -417,6 +420,9 @@
       <Filter>Source Files\Space</Filter>
     </ClCompile>
     <ClCompile Include="Sources\Grille.cpp">
+      <Filter>Source Files\Space</Filter>
+    </ClCompile>
+    <ClCompile Include="Sources\Glass.cpp">
       <Filter>Source Files\Space</Filter>
     </ClCompile>
   </ItemGroup>
