--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -264,6 +264,9 @@
     <ClInclude Include="Sources\Glass.h">
       <Filter>Header Files\Space</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Item.h">
+      <Filter>Header Files\Space</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
