--- a/KVEngine.vcxproj
+++ b/KVEngine.vcxproj
@@ -69,6 +69,7 @@
     <ClInclude Include="Sources\SpaceTurf.h" />
     <ClInclude Include="Sources\sprite.h" />
     <ClInclude Include="Sources\StreamWrapper.h" />
+    <ClInclude Include="Sources\Structure.h" />
     <ClInclude Include="Sources\sync_random.h" />
     <ClInclude Include="Sources\Teleportator.h" />
     <ClInclude Include="Sources\Testmob.h" />
