--- a/KVEngine.vcxproj.filters
+++ b/KVEngine.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClInclude Include="Sources\Shard.h">
       <Filter>Header Files\Space</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Structure.h">
+      <Filter>Header Files\Space</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\ApproxGLImage.cpp">
